
[package]
name = "shadowchain"
version = "4.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
ark-std = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-snark = "0.4"
ark-ff = "0.4"
ark-r1cs-std = "0.4"
wasmtime = "19.0.2"
